returning all events from a user on the API
